--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "bulma-slider",
   "description": "Display classic slider more sexy, in different colors, sizes, and states",
   "main": "slider.sass",
+  "version": "0.1.3",
   "authors": [
     "Wikiki <wikiki@protonmail.com> (https://wikiki.github.io/bulma-extensions/overview)"
   ],
