--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bulma-slider",
   "version": "2.0.0",
   "description": "Display classic slider more sexy, in different colors, sizes, and states ",
-  "main": "./dist/js/bulma-slider.min.jss",
+  "main": "./dist/js/bulma-slider.min.js",
   "style": "./dist/css/bulma-slider.min.css",
   "scripts": {
     "build": "gulp",
