fix(build): issue with babel integration

--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,32 @@
 {
   "sourceMaps": false,
-  "ignore": ["node_modules/**"],
+  "ignore": [
+    "node_modules/**"
+  ],
   "presets": [
-    ["env", {
-      "modules": false,
-      "targets": {
-        "browsers": [ ">0.25%", "ie 11"]
+    [
+      "@babel/preset-env",
+      {
+        "modules": false,
+        "targets": {
+          "browsers": [
+            ">0.25%",
+            "ie 11"
+          ]
+        }
       }
-    }]
+    ]
   ],
   "env": {
     "test": {
-      "presets": [["env"]]
+      "presets": [
+        [
+          "env"
+        ]
+      ]
     }
   },
   "plugins": [
-    "transform-object-rest-spread"
+    "@babel/plugin-proposal-object-rest-spread"
   ]
 }
