--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
   },
   "homepage": "https://github.com/Wikiki/bulma-slider#readme",
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
     "ansi-colors": "^4.1.1",
     "autoprefixer": "^10.4.2",
-    "babel-core": "^6.26.3",
     "babel-jest": "^27.4.6",
     "babel-loader": "^8.2.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "bulma": "^0.9.3",
     "camelcase": "^6.3.0",
     "commitizen": "^4.2.4",
