--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "sourceMaps": false,
+
   "ignore": [
     "node_modules/**"
   ],
@@ -7,7 +8,7 @@
     [
       "@babel/preset-env",
       {
-        "modules": false,
+        "modules": "commonjs",
         "targets": {
           "browsers": [
             ">0.25%",
@@ -17,15 +18,6 @@
       }
     ]
   ],
-  "env": {
-    "test": {
-      "presets": [
-        [
-          "env"
-        ]
-      ]
-    }
-  },
   "plugins": [
     "@babel/plugin-proposal-object-rest-spread"
   ]
